--- a/action.yml
+++ b/action.yml
@@ -40,3 +40,7 @@ runs:
           -e API_KEY="${API_KEY}" \
           -e EMAIL="${EMAIL}" \
           public.ecr.aws/y5g4u6y7/kusho-jenkins-runner:latest
+          
+branding:
+  icon: 'award'
+  color: 'green'
